feat: minor changes

--- a/config/locales/clients/clients.en.yml
+++ b/config/locales/clients/clients.en.yml
@@ -4,3 +4,8 @@ en:
       created: "Client was successfully created."
       updated: "Client was successfully updated."
       destroyed: "Client was successfully destroyed."
+
+  clients_manager:
+    attributes:
+      manager_id:
+        already_manages: "already manages this client"
