feat: 🎸 implements user permissions

--- a/config/locales/settings/settings.en.yml
+++ b/config/locales/settings/settings.en.yml
@@ -2,3 +2,6 @@ en:
   settings:
     notices:
       updated: "Settings have been updated successfully."
+
+    errors:
+      update_failed: "Updating settings failed. Please notify your site administrator."
