--- a/config/locales/clients_manager/clients_manager.en.yml
+++ b/config/locales/clients_manager/clients_manager.en.yml
@@ -5,4 +5,4 @@ en:
         clients_manager:
           attributes:
             manager_id:
-              already_manages: already manages 
+              already_manages: Already manages 
