--- a/config/locales/permissions/permissions.en.yml
+++ b/config/locales/permissions/permissions.en.yml
@@ -18,33 +18,28 @@ en:
         permission/group:
           attributes:
             permissions:
-              invalid_format: must include resource, action, and effect (allow/deny)
-              invalid_conditions: must be a valid conditions hash
-              invalid_time_restriction: time restrictions must include start and end times
+              invalid_format: Must include resource, action, and effect (allow/deny)
+              invalid_conditions: Must be a valid conditions hash
+              invalid_time_restriction: Must include start and end times
 
-  permissions:
-    index:
-      title: Permission Groups
-      new: New Permission Group
-    new:
-      title: New Permission Group
-    edit:
-      title: Edit Permission Group
-    create:
-      success: Permission group was successfully created.
-    update:
-      success: Permission group was successfully updated.
-    destroy:
-      success: Permission group was successfully deleted.
-    form:
-      basic_info: Basic Information
-      permissions: Permissions
-      assignments: Assignments
-      add_permission: Add Permission
-      add_assignment: Add Assignment
-      conditions:
-        owner_only: Owner Only
-        time_restricted: Time Restricted
-      effects:
-        allow: Allow
-        deny: Deny 
+  permission:
+    views:
+      index:
+        title: Permission Groups
+        new: New Permission Group
+      new:
+        title: New Permission Group
+      edit:
+        title: Edit Permission Group
+      form:
+        basic_info: Basic Information
+        permissions: Permissions
+        assignments: Assignments
+        add_permission: Add Permission
+        add_assignment: Add Assignment
+        conditions:
+          owner_only: Owner Only
+          time_restricted: Time Restricted
+        effects:
+          allow: Allow
+          deny: Deny 
